fixed styles for the blog and layout issues - 1.2.3

--- a/src/scss/components/normalise/_normalise.scss
+++ b/src/scss/components/normalise/_normalise.scss
@@ -31,11 +31,11 @@ html.font-loaded {
         @include lato-family-bold;
     }
 
-    h1, h2, h3, h4, h5, h6, p {
+    h1, h2, h3, h4, h5, h6 {
         @include lato-family-bold;
     }
 
-    p {
+    p, .lb-content ul {
         @include lato-family;
     }
 
@@ -349,6 +349,19 @@ ul {
 }
 
 p {
+    @include rem(margin, 0 0 $section);
+    @include rem(line-height, 2.2rem);
+    color: $grey-dark-color;
+    @include rem(font-size, 1.375rem);
+    word-wrap: break-word;
+}
+
+.lb-content ul {
+    list-style-type: none;
+    @include rem(margin, 0 0 $section);
+}
+
+.lb-content ul li {
     @include rem(margin, 0 0 $section);
     @include rem(line-height, 2.2rem);
     color: $grey-dark-color;
